# elastic-tools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
configs/: defaults.json
elastic_tools/: config.py  postprocess.py  preprocess.py
elastic_tools/scripts/: arrange_config.py  main.py  submit_jobs.py
tests/: conftest.py  test_postprocess.py
tests/data/inputs/Al/: INCAR  postprocess.json  preprocess.json  stiffness.txt
tests/data/inputs/Al/deform-004/: vasprun.xml
tests/data/inputs/Al/deform-006/: POSCAR.init
tests/data/inputs/Al/deform-007/: POSCAR
tests/data/inputs/Al/deform-009/: vasprun.xml
tests/data/inputs/Al/deform-010/: strain.json  vasprun.xml
tests/data/inputs/Al/deform-011/: strain.json
tests/data/inputs/Al/deform-012/: POSCAR.init  strain.json  vasprun.xml
tests/data/inputs/Al/deform-013/: POSCAR.init  vasprun.xml
tests/data/inputs/Al/deform-014/: POSCAR  strain.json  vasprun.xml
tests/data/inputs/Al/deform-015/: strain.json
tests/data/inputs/Al/deform-016/: strain.json
tests/data/inputs/Al/deform-017/: vasprun.xml
tests/data/inputs/Al/deform-018/: POSCAR
tests/data/inputs/Al/deform-019/: vasprun.xml
tests/data/inputs/Al/deform-020/: strain.json  vasprun.xml
tests/data/inputs/Al/deform-022/: POSCAR.init  strain.json
tests/data/inputs/Al/deform-023/: vasprun.xml
tests/data/inputs/Al/deform_set/deform-001/: POSCAR  strain.json
tests/data/inputs/Al/deform_set/deform-003/: POSCAR.init
tests/data/inputs/Al/vasp_outputs/: INCAR
(+47 files in other folders)
