[metadata]
name = elastic_tools
version = 1.1.1
author = Taiki Iwamura
author_email = takki.0206@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iwamura-lab/elastic-tools/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = elastic_tools
python_requires = >=3.7
